feat(benchmark): add aRPC vs. gRPC benchmark

--- a/benchmark/echo-grpc/Dockerfile
+++ b/benchmark/echo-grpc/Dockerfile
@@ -2,21 +2,18 @@
 FROM golang:1.23.9-bullseye AS builder
 
 ENV CGO_ENABLED=0
-ENV GO111MODULE=on
 
 # Set the working directory
 WORKDIR /app
 
 # Copy the entire arpc folder from parent directory
-COPY . /app/arpc/
+COPY . /app/echo-grpc/
 
 # Set working directory to the arpc folder
-WORKDIR /app/arpc
-
-RUN go mod tidy
+WORKDIR /app/echo-grpc
 
 # Build the frontend
-RUN go build -trimpath -ldflags="-s -w" -o frontend frontend/frontend.go frontend/metrics.go
+RUN go build -trimpath -ldflags="-s -w" -o frontend frontend/frontend.go 
 
 # Build the server
 RUN go build -trimpath -ldflags="-s -w" -o server server/server.go
@@ -27,7 +24,7 @@ FROM alpine:latest
 WORKDIR /app
 
 # Copy the binaries from the builder stage
-COPY --from=builder /app/arpc/frontend /app/frontend
-COPY --from=builder /app/arpc/server /app/server
+COPY --from=builder /app/echo-grpc/frontend /app/frontend
+COPY --from=builder /app/echo-grpc/server /app/server
 
 RUN chmod +x /app/frontend /app/server
