Add k8s manifest for all sample applications

--- a/examples/echo_capnp/echo_capnp.yaml
+++ b/examples/echo_capnp/echo_capnp.yaml
@@ -40,7 +40,7 @@ metadata:
   labels:
     app: server
 spec:
-  clusterIP: 10.96.77.76
+  clusterIP: None
   ports:
   - name: server
     port: 9000
