--- a/examples/echo_symphony/echo_symphony_proxy.yaml
+++ b/examples/echo_symphony/echo_symphony_proxy.yaml
@@ -16,33 +16,21 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: frontend-with-proxy
+  name: frontend
 spec:
   containers:
   - name: frontend
     image: appnetorg/echo-symphony:latest
+    command: ["/app/frontend/frontend"]
     ports:
     - containerPort: 8080
-    securityContext:
-      runAsUser: 1000
-  - name: udp-proxy
+  - name: symphony-proxy
     image: appnetorg/symphony-proxy:latest
+    command: ["/app/proxy"]
     securityContext:
       capabilities:
         add: ["NET_ADMIN", "NET_RAW"]
       runAsUser: 1337
-  initContainers:
-  - name: set-iptables
-    image: busybox
-    securityContext:
-      capabilities:
-        add: ["NET_ADMIN"]
-    command:
-    - sh
-    - -c
-    - |
-      iptables -t nat -A PREROUTING -p udp --sport 9000 -j REDIRECT --to-ports 15002
-      iptables -t nat -A OUTPUT -p udp --dport 9000 -m owner ! --uid-owner 1337 -j REDIRECT --to-ports 15002
 ---
 apiVersion: v1
 kind: Service
