Fix proxy address

--- a/examples/echo_symphony/manifest/echo_symphony_proxy.yaml
+++ b/examples/echo_symphony/manifest/echo_symphony_proxy.yaml
@@ -13,24 +13,36 @@ spec:
   selector:
     app: frontend
 ---
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: frontend
 spec:
-  containers:
-  - name: frontend
-    image: appnetorg/echo-symphony:latest
-    command: ["/app/frontend/frontend"]
-    ports:
-    - containerPort: 8080
-  - name: symphony-proxy
-    image: appnetorg/symphony-proxy:latest
-    command: ["/app/proxy"]
-    securityContext:
-      capabilities:
-        add: ["NET_ADMIN", "NET_RAW"]
-      runAsUser: 1337
+  replicas: 1
+  template:
+    metadata:
+      name: frontend
+      labels:
+        app: frontend
+    spec:
+      containers:
+      - image: appnetorg/echo-symphony:latest
+        name: frontend-echo-symphony
+        command: ["/app/frontend/frontend"]
+        securityContext:
+          runAsUser: 0
+          capabilities:
+            add: ["NET_ADMIN"]
+      - image: appnetorg/symphony-proxy:latest
+        name: symphony-proxy
+        command: ["/app/proxy"]
+        securityContext:
+          capabilities:
+            add: ["NET_ADMIN", "NET_RAW"]
+          runAsUser: 1337
+  selector:
+    matchLabels:
+      app: frontend
 ---
 apiVersion: v1
 kind: Service
