add istio injection

--- a/benchmark/echo-grpc/echo-grpc.yaml
+++ b/benchmark/echo-grpc/echo-grpc.yaml
@@ -24,6 +24,7 @@ spec:
       name: frontend
       labels:
         app: frontend
+        # sidecar.istio.io/inject: "true"
     spec:
       containers:
       - image: appnetorg/echo-grpc-benchmark:latest
