--- a/benchmark/echo-grpc/envoyfilters/mutation/mutation-client.yaml
+++ b/benchmark/echo-grpc/envoyfilters/mutation/mutation-client.yaml
@@ -5,13 +5,13 @@ metadata:
 spec:
   workloadSelector:
     labels:
-      app: frontend #
+      app: frontend
   configPatches:
   - applyTo: HTTP_FILTER
     match:
-      context: SIDECAR_OUTBOUND # 
+      context: SIDECAR_OUTBOUND
       listener:
-        portNumber: 8081 # port number of ping
+        portNumber: 9000
         filterChain:
           filter:
             name: envoy.filters.network.http_connection_manager
@@ -25,11 +25,11 @@ spec:
           "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
           config:
             name: mutation-client
-            root_id: mutation--client
+            root_id: mutation-client
             vm_config:
               vm_id: vm.sentinel.mutation-client
               runtime: envoy.wasm.runtime.v8
               code:
                 local:
-                  filename: /etc/acl.wasm
+                  filename: /etc/mutation.wasm
               allow_precompiled: false
