--- a/benchmark/echo-grpc/manifest/echo-grpc.yaml
+++ b/benchmark/echo-grpc/manifest/echo-grpc.yaml
@@ -60,6 +60,7 @@ spec:
       name: server
       labels:
         app: server
+        sidecar.istio.io/inject: "false"
     spec:
       containers:
       - image: appnetorg/echo-grpc-benchmark:latest
