--- a/examples/echo_symphony/manifest/echo_symphony_proxy.yaml
+++ b/examples/echo_symphony/manifest/echo_symphony_proxy.yaml
@@ -35,8 +35,7 @@ spec:
           - /bin/sh
           - -c
           - |
-            iptables -t nat -A PREROUTING -p udp --sport 9000 -j REDIRECT --to-ports 15002
-            iptables -t nat -A OUTPUT -p udp --dport 9000 -m owner ! --uid-owner 1337 -j REDIRECT --to-ports 15002
+            bash /apply_symphony_iptables.sh
         securityContext:
           runAsUser: 0
           capabilities:
@@ -58,7 +57,7 @@ spec:
             add: ["NET_ADMIN", "NET_RAW"]
         env:
         - name: SYMPHONY_DEST_ADDR
-          value: "10.244.0.78:9000"
+          value: "10.244.0.90:11000"
 ---
 apiVersion: v1
 kind: Service
@@ -70,9 +69,9 @@ spec:
   clusterIP: None
   ports:
   - name: server
-    port: 9000
+    port: 11000
     protocol: UDP
-    targetPort: 9000
+    targetPort: 11000
   selector:
     app: server
 ---
