--- a/examples/echo_symphony/manifest/echo_symphony_proxy.yaml
+++ b/examples/echo_symphony/manifest/echo_symphony_proxy.yaml
@@ -57,7 +57,7 @@ spec:
             add: ["NET_ADMIN", "NET_RAW"]
         env:
         - name: SYMPHONY_DEST_ADDR
-          value: "10.244.0.90:11000"
+          value: "10.244.0.113:11000"
 ---
 apiVersion: v1
 kind: Service
@@ -87,10 +87,32 @@ spec:
       labels:
         app: server
     spec:
+      initContainers:
+      - name: set-iptables
+        image: appnetorg/symphony-proxy-init-container:latest
+        command:
+          - /bin/sh
+          - -c
+          - |
+            bash /apply_symphony_iptables.sh
+        securityContext:
+          runAsUser: 0
+          capabilities:
+            add: ["NET_ADMIN"]
       containers:
       - image: appnetorg/echo-symphony:latest
         name: server-echo-symphony
         command: ["/app/server/server"]
+      - name: symphony-proxy
+        image: appnetorg/symphony-proxy:latest
+        command: ["/app/proxy"]
+        securityContext:
+          runAsUser: 1337
+          capabilities:
+            add: ["NET_ADMIN", "NET_RAW"]
+        env:
+        - name: SYMPHONY_DEST_ADDR
+          value: "10.244.0.113:11000"
   selector:
     matchLabels:
       app: server
