Update echo symphony example

--- a/examples/echo_symphony/manifest/echo_symphony_proxy.yaml
+++ b/examples/echo_symphony/manifest/echo_symphony_proxy.yaml
@@ -48,6 +48,9 @@ spec:
           runAsUser: 0
           capabilities:
             add: ["NET_ADMIN"]
+        env:
+        - name: LOG_LEVEL
+          value: info
       - name: symphony-proxy
         image: appnetorg/symphony-proxy:latest
         command: ["/app/proxy"]
@@ -55,6 +58,9 @@ spec:
           runAsUser: 1337
           capabilities:
             add: ["NET_ADMIN", "NET_RAW"]
+        env:
+        - name: LOG_LEVEL
+          value: info
 ---
 apiVersion: v1
 kind: Service
@@ -107,6 +113,9 @@ spec:
           runAsUser: 0
           capabilities:
             add: ["NET_ADMIN"]
+        env:
+        - name: LOG_LEVEL
+          value: info
       - name: symphony-proxy
         image: appnetorg/symphony-proxy:latest
         command: ["/app/proxy"]
@@ -114,3 +123,6 @@ spec:
           runAsUser: 1337
           capabilities:
             add: ["NET_ADMIN", "NET_RAW"]
+        env:
+        - name: LOG_LEVEL
+          value: info
