--- a/examples/echo_symphony/manifest/echo_symphony.yaml
+++ b/examples/echo_symphony/manifest/echo_symphony.yaml
@@ -29,6 +29,9 @@ spec:
       - image: appnetorg/echo-symphony:latest
         name: frontend-echo-symphony
         command: ["/app/frontend/frontend"]
+        env:
+        - name: LOG_LEVEL
+          value: info
   selector:
     matchLabels:
       app: frontend
@@ -65,6 +68,9 @@ spec:
       - image: appnetorg/echo-symphony:latest
         name: server-echo-symphony
         command: ["/app/server/server"]
+        env:
+        - name: LOG_LEVEL
+          value: info
   selector:
     matchLabels:
       app: server
