--- a/benchmark/kv-store-symphony-transport/manifest/kvstore-proxy.yaml
+++ b/benchmark/kv-store-symphony-transport/manifest/kvstore-proxy.yaml
@@ -41,9 +41,9 @@ spec:
           capabilities:
             add: ["NET_ADMIN"]
       containers:
-      - name: frontend-kvstore-symphony
-        image: appnetorg/kvstore-symphony:latest
-        command: ["/app/frontend/frontend"]
+      - name: frontend-kvstore-symphony-transport
+        image: appnetorg/kvstore-symphony-transport:latest
+        command: ["/app/frontend"]
         securityContext:
           runAsUser: 0
           capabilities:
@@ -108,9 +108,9 @@ spec:
           capabilities:
             add: ["NET_ADMIN"]
       containers:
-      - image: appnetorg/kvstore-symphony:latest
-        name: kvstore-kvstore-symphony
-        command: ["/app/kvstore/kvstore"]
+      - image: appnetorg/kvstore-symphony-transport:latest
+        name: kvstore-kvstore-symphony-transport
+        command: ["/app/kvstore"]
         securityContext:
           runAsUser: 0
           capabilities:
