--- a/benchmark/kv-store-symphony-transport/manifest/kvstore.yaml
+++ b/benchmark/kv-store-symphony-transport/manifest/kvstore.yaml
@@ -26,9 +26,9 @@ spec:
         app: frontend
     spec:
       containers:
-      - image: appnetorg/kvstore-symphony:latest
-        name: frontend-kvstore-symphony
-        command: ["/app/frontend/frontend"]
+      - image: appnetorg/kvstore-symphony-transport:latest
+        name: frontend-kvstore-symphony-transport
+        command: ["/app/frontend"]
         env:
         - name: LOG_LEVEL
           value: info
@@ -65,9 +65,9 @@ spec:
         app: kvstore
     spec:
       containers:
-      - image: appnetorg/kvstore-symphony:latest
-        name: kvstore-kvstore-symphony
-        command: ["/app/kvstore/kvstore"]
+      - image: appnetorg/kvstore-symphony-transport:latest
+        name: kvstore-kvstore-symphony-transport
+        command: ["/app/kvstore"]
         env:
         - name: LOG_LEVEL
           value: info
