--- a/benchmark/kv-store-symphony/manifest/kvstore-proxy.yaml
+++ b/benchmark/kv-store-symphony/manifest/kvstore-proxy.yaml
@@ -43,7 +43,7 @@ spec:
       containers:
       - name: frontend-kvstore-symphony
         image: appnetorg/kvstore-symphony:latest
-        command: ["/app/frontend"]
+        command: ["/app/frontend/frontend"]
         securityContext:
           runAsUser: 0
           capabilities:
@@ -110,7 +110,7 @@ spec:
       containers:
       - image: appnetorg/kvstore-symphony:latest
         name: kvstore-kvstore-symphony
-        command: ["/app/kvstore"]
+        command: ["/app/kvstore/kvstore"]
         securityContext:
           runAsUser: 0
           capabilities:
