--- a/benchmark/kv-store-symphony/manifest/kvstore.yaml
+++ b/benchmark/kv-store-symphony/manifest/kvstore.yaml
@@ -28,7 +28,7 @@ spec:
       containers:
       - image: appnetorg/kvstore-symphony:latest
         name: frontend-kvstore-symphony
-        command: ["/app/frontend"]
+        command: ["/app/frontend/frontend"]
         env:
         - name: LOG_LEVEL
           value: info
@@ -67,7 +67,7 @@ spec:
       containers:
       - image: appnetorg/kvstore-symphony:latest
         name: kvstore-kvstore-symphony
-        command: ["/app/kvstore"]
+        command: ["/app/kvstore/kvstore"]
         env:
         - name: LOG_LEVEL
           value: info
