--- a/benchmark/kv-store-grpc/manifest/kvstore-istio-h2.yaml
+++ b/benchmark/kv-store-grpc/manifest/kvstore-istio-h2.yaml
@@ -52,7 +52,7 @@ spec:
         - /app/frontend/frontend
         env:
         - name: LOG_LEVEL
-          value: debug
+          value: info
         image: appnetorg/kvstore-grpc:latest
         name: frontend-kvstore-grpc
         resources: {}
@@ -315,7 +315,7 @@ spec:
         - /app/kvstore/kvstore
         env:
         - name: LOG_LEVEL
-          value: debug
+          value: info
         image: appnetorg/kvstore-grpc:latest
         name: kvstore-kvstore-grpc
         resources: {}
