--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,7 +24,14 @@ jobs:
     - name: Install protoc
       run: |
         sudo apt-get update
-        sudo apt-get install -y protobuf-compiler
+        sudo apt-get install -y wget unzip
+        PROTOC_VERSION=29.3
+        wget https://github.com/protocolbuffers/protobuf/releases/download/v${PROTOC_VERSION}/protoc-${PROTOC_VERSION}-linux-x86_64.zip
+        unzip protoc-${PROTOC_VERSION}-linux-x86_64.zip -d protoc-${PROTOC_VERSION}
+        sudo cp protoc-${PROTOC_VERSION}/bin/protoc /usr/local/bin/
+        sudo cp -r protoc-${PROTOC_VERSION}/include/google /usr/local/include/
+        sudo chmod +x /usr/local/bin/protoc
+        protoc --version
 
     - name: Install protoc plugins
       run: |
