--- a/benchmark/kv-store-symphony-transport/manifest/kvstore-proxy.yaml
+++ b/benchmark/kv-store-symphony-transport/manifest/kvstore-proxy.yaml
@@ -31,6 +31,7 @@ spec:
       initContainers:
       - name: set-iptables
         image: appnetorg/symphony-proxy-init-container:latest
+        imagePullPolicy: Always
         command:
           - /bin/sh
           - -c
@@ -43,6 +44,7 @@ spec:
       containers:
       - name: frontend-kvstore-symphony-transport
         image: appnetorg/kvstore-symphony-transport:latest
+        imagePullPolicy: Always
         command: ["/app/frontend"]
         securityContext:
           runAsUser: 0
@@ -53,6 +55,7 @@ spec:
           value: info
       - name: symphony-proxy
         image: appnetorg/symphony-proxy:latest
+        imagePullPolicy: Always
         command: ["/app/proxy"]
         securityContext:
           runAsUser: 1337
@@ -98,6 +101,7 @@ spec:
       initContainers:
       - name: set-iptables
         image: appnetorg/symphony-proxy-init-container:latest
+        imagePullPolicy: Always
         command:
           - /bin/sh
           - -c
@@ -109,6 +113,7 @@ spec:
             add: ["NET_ADMIN"]
       containers:
       - image: appnetorg/kvstore-symphony-transport:latest
+        imagePullPolicy: Always
         name: kvstore-kvstore-symphony-transport
         command: ["/app/kvstore"]
         securityContext:
@@ -120,6 +125,7 @@ spec:
           value: info
       - name: symphony-proxy
         image: appnetorg/symphony-proxy:latest
+        imagePullPolicy: Always
         command: ["/app/proxy"]
         securityContext:
           runAsUser: 1337
