Add env variable for encryption

--- a/benchmark/kv-store-symphony-element/manifest/kvstore-proxy.yaml
+++ b/benchmark/kv-store-symphony-element/manifest/kvstore-proxy.yaml
@@ -51,6 +51,8 @@ spec:
         env:
         - name: LOG_LEVEL
           value: info
+        - name: ENABLE_ENCRYPTION
+          value: "false"
       - name: symphony-proxy
         image: appnetorg/symphony-proxy:latest
         command: ["/app/proxy"]
@@ -118,6 +120,8 @@ spec:
         env:
         - name: LOG_LEVEL
           value: info
+        - name: ENABLE_ENCRYPTION
+          value: "false"
       - name: symphony-proxy
         image: appnetorg/symphony-proxy:latest
         command: ["/app/proxy"]
