--- a/benchmark/kv-store-symphony-element/manifest/kvstore.yaml
+++ b/benchmark/kv-store-symphony-element/manifest/kvstore.yaml
@@ -32,6 +32,8 @@ spec:
         env:
         - name: LOG_LEVEL
           value: info
+        - name: ENABLE_ENCRYPTION
+          value: "false"
   selector:
     matchLabels:
       app: frontend
@@ -71,6 +73,8 @@ spec:
         env:
         - name: LOG_LEVEL
           value: info
+        - name: ENABLE_ENCRYPTION
+          value: "false"
   selector:
     matchLabels:
       app: kvstore
