--- a/benchmark/kv-store-symphony-transport/manifest/kvstore-proxy.yaml
+++ b/benchmark/kv-store-symphony-transport/manifest/kvstore-proxy.yaml
@@ -53,6 +53,8 @@ spec:
         env:
         - name: LOG_LEVEL
           value: info
+        - name: ENABLE_ENCRYPTION
+          value: "false"
       - name: symphony-proxy
         image: appnetorg/symphony-proxy:latest
         imagePullPolicy: Always
@@ -123,6 +125,8 @@ spec:
         env:
         - name: LOG_LEVEL
           value: info
+        - name: ENABLE_ENCRYPTION
+          value: "false"
       - name: symphony-proxy
         image: appnetorg/symphony-proxy:latest
         imagePullPolicy: Always
