--- a/benchmark/kv-store-symphony-element/manifest/kvstore-proxy.yaml
+++ b/benchmark/kv-store-symphony-element/manifest/kvstore-proxy.yaml
@@ -63,8 +63,8 @@ spec:
         env:
         - name: LOG_LEVEL
           value: info
-        - name: ENABLE_PACKET_BUFFERING
-          value: "true"
+        - name: ENABLE_ENCRYPTION
+          value: "false"
 ---
 apiVersion: v1
 kind: Service
@@ -132,5 +132,5 @@ spec:
         env:
         - name: LOG_LEVEL
           value: info
-        - name: ENABLE_PACKET_BUFFERING
-          value: "true"
+        - name: ENABLE_ENCRYPTION
+          value: "false"
