--- a/benchmark/kv-store-symphony/manifest/kvstore.yaml
+++ b/benchmark/kv-store-symphony/manifest/kvstore.yaml
@@ -33,7 +33,7 @@ spec:
         - name: LOG_LEVEL
           value: info
         - name: ENABLE_ENCRYPTION
-          value: "false"
+          value: "true"
   selector:
     matchLabels:
       app: frontend
@@ -74,7 +74,7 @@ spec:
         - name: LOG_LEVEL
           value: info
         - name: ENABLE_ENCRYPTION
-          value: "false"
+          value: "true"
   selector:
     matchLabels:
       app: kvstore
